--- a/TP4_RodriguezMariano/src/main/resources/application.properties
+++ b/TP4_RodriguezMariano/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.password=44350408mr:D
 spring.jpa.show-sql = true
 
 #[Opcional] Crea las tablas
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update/
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
