--- a/TP4_RodriguezMariano/pom.xml
+++ b/TP4_RodriguezMariano/pom.xml
@@ -57,6 +57,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.hibernate.validator</groupId>
+    <artifactId>hibernate-validator</artifactId>
+</dependency>
 	</dependencies>
 
 	<build>
